--- a/EmployeeManagementService.Domain.Data/EmployeeManagementService.Domain.Data.csproj
+++ b/EmployeeManagementService.Domain.Data/EmployeeManagementService.Domain.Data.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\Repositories\Departments\" />
+    <Folder Include="Abstractions\Repositories\Departments\" />
   </ItemGroup>
 
 </Project>
