EMS_2 - Final solution

--- a/EmployeeManagementService.Application/EmployeeManagementService.Application.csproj
+++ b/EmployeeManagementService.Application/EmployeeManagementService.Application.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmployeeManagementService.Domain.Data.Abstractions\EmployeeManagementService.Domain.Data.csproj" />
-    <ProjectReference Include="..\EmployeeManagementService.Domain.Data\EmployeeManagementService.Domain.Data.csproj" />
+    <ProjectReference Include="..\EmployeeManagementService.Domain\EmployeeManagementService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
