--- a/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
+++ b/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\Repositories\Departments\" />
+    <Folder Include="Data\Interfaces\Repositories\Departments\" />
   </ItemGroup>
 
 </Project>
